Fix variable declaration context tests